feat_fix: org switcher added and polished some security issue
