# aiaas-auth-service/src/routes/org.route.js
@@ -7,5 +7,7 @@ const { isAuthenticated } = require('../middlewares');
 router.post('/orgs', isAuthenticated, orgController.createOrg);
 // get all organizations for a user route
 router.get('/orgs/u/:userId', isAuthenticated, orgController.getAllOrgsOfUser);
+// switch organization route
+router.post('/orgs/switch', isAuthenticated, orgController.switchOrg);
 
 module.exports = router;
